--- a/search/index.html
+++ b/search/index.html
@@ -10,7 +10,7 @@
 	<meta name="description"
 		content="Search.">
 	<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://malscope.github.io/img/avatar.jpg"/>
+<meta name="twitter:image" content="https://ByridianBlack.github.io/img/avatar.jpg"/>
 
 <meta name="twitter:title" content="Search 🔍"/>
 <meta name="twitter:description" content="Search."/>
@@ -20,26 +20,26 @@
 <meta itemprop="description" content="Search.">
 
 <meta itemprop="wordCount" content="99">
-<meta itemprop="image" content="https://malscope.github.io/img/avatar.jpg"/>
+<meta itemprop="image" content="https://ByridianBlack.github.io/img/avatar.jpg"/>
 
 
 
 <meta itemprop="keywords" content="" />
 	<link rel="stylesheet" href="/css/bundle.min.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="https://malscope.github.io/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://malscope.github.io/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://malscope.github.io/icons/favicon-16x16.png">
-	<link rel="shortcut icon" href="https://malscope.github.io/icons/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="https://malscope.github.io/icons/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://ByridianBlack.github.io/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://ByridianBlack.github.io/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://ByridianBlack.github.io/icons/favicon-16x16.png">
+	<link rel="shortcut icon" href="https://ByridianBlack.github.io/icons/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="https://ByridianBlack.github.io/icons/favicon.ico" type="image/x-icon">
 	<meta name="msapplication-TileColor" content="#8dc153">
-	<link rel="manifest" href="https://malscope.github.io/manifest.json">
+	<link rel="manifest" href="https://ByridianBlack.github.io/manifest.json">
 	
 	<script type="application/ld+json">
 {
 	"@context":"http://schema.org",
 	"@type":"WebSite",
 	"name":"MalScope",
-	"url":"https:\/\/malscope.github.io",
+	"url":"https:\/\/ByridianBlack.github.io",
 	"sameAs":[
 		"https://twitter.com/ByridianBlack",
 		"https://gitlab.com/",
@@ -61,14 +61,14 @@
 	"name": "ByridianBlack",
 	"jobTitle": "Cybersecurity Analyst",
 	"gender": "",
-	"url": "https:\/\/malscope.github.io",
+	"url": "https:\/\/ByridianBlack.github.io",
 	"sameAs":[
 		"https://twitter.com/ByridianBlack",
 		"https://gitlab.com/",
 		"https://linkedin.com/in/philip-okoh-a16733232",
 		"https://t.me/"
 		],
-	"image": "https:\/\/malscope.github.io\/img\/avatar.jpg",
+	"image": "https:\/\/ByridianBlack.github.io\/img\/avatar.jpg",
 	"address": {
 		"@type": "PostalAddress",
 		"streetAddress": "Mayong, Jepara",
@@ -88,7 +88,7 @@
 	"@context": "http://schema.org",
 	"@type": "WebPage",
 	"name": "Search 🔍",
-	"url": " https:\/\/malscope.github.iohttps:\/\/malscope.github.io\/search\/",
+	"url": " https:\/\/ByridianBlack.github.iohttps:\/\/ByridianBlack.github.io\/search\/",
 	"description": ".gsc-control-cse, .gsc-result{ border: none!important; background-color: transparent!important; } .gsc-result-info, .gsc-orderby-label{ color: var(--disabled-text-color)!"
 }
 </script>
