--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 	<meta name="description"
 		content="Join in reading this blog as I analze various samples from keyloggers to rats to rootkits.">
 	<meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ByridianBlack.github.io/img/avatar.jpg"/>
+<meta name="twitter:image" content="https://malscope.com/img/avatar.jpg"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Join in reading this blog as I analze various samples from keyloggers to rats to rootkits."/>
@@ -19,20 +19,20 @@
 	<meta itemprop="name" content="404 Page not found">
 <meta itemprop="description" content="Join in reading this blog as I analze various samples from keyloggers to rats to rootkits.">
 	<link rel="stylesheet" href="/css/bundle.min.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="https://ByridianBlack.github.io/icons/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://ByridianBlack.github.io/icons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://ByridianBlack.github.io/icons/favicon-16x16.png">
-	<link rel="shortcut icon" href="https://ByridianBlack.github.io/icons/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="https://ByridianBlack.github.io/icons/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://malscope.com/icons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://malscope.com/icons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://malscope.com/icons/favicon-16x16.png">
+	<link rel="shortcut icon" href="https://malscope.com/icons/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="https://malscope.com/icons/favicon.ico" type="image/x-icon">
 	<meta name="msapplication-TileColor" content="#8dc153">
-	<link rel="manifest" href="https://ByridianBlack.github.io/manifest.json">
+	<link rel="manifest" href="https://malscope.com/manifest.json">
 	
 	<script type="application/ld+json">
 {
 	"@context":"http://schema.org",
 	"@type":"WebSite",
 	"name":"MalScope",
-	"url":"https:\/\/ByridianBlack.github.io",
+	"url":"https:\/\/malscope.com",
 	"sameAs":[
 		"https://twitter.com/ByridianBlack",
 		"https://gitlab.com/",
@@ -54,14 +54,14 @@
 	"name": "ByridianBlack",
 	"jobTitle": "Cybersecurity Analyst",
 	"gender": "",
-	"url": "https:\/\/ByridianBlack.github.io",
+	"url": "https:\/\/malscope.com",
 	"sameAs":[
 		"https://twitter.com/ByridianBlack",
 		"https://gitlab.com/",
 		"https://linkedin.com/in/philip-okoh-a16733232",
 		"https://t.me/"
 		],
-	"image": "https:\/\/ByridianBlack.github.io\/img\/avatar.jpg",
+	"image": "https:\/\/malscope.com\/img\/avatar.jpg",
 	"address": {
 		"@type": "PostalAddress",
 		"streetAddress": "Mayong, Jepara",
@@ -82,13 +82,13 @@
 	"@type":"BlogPosting",
 	"mainEntityOfPage":{
 		"@type":"WebPage",
-		"@id":"https:\/\/ByridianBlack.github.iohttps:\/\/ByridianBlack.github.io\/404.html"
+		"@id":"https:\/\/malscope.comhttps:\/\/malscope.com\/404.html"
 	},
 	"headline":"",
 	"dateModified":"0001-01-01T00",
 	"description":"",
 	"isFamilyFriendly": "true",
-	"image": ["https://ByridianBlack.github.io/img/avatar.jpg"],
+	"image": ["https://malscope.com/img/avatar.jpg"],
 	"wordCount" : "0",
 	"keywords":  null ,
 	"genre":  null ,
@@ -112,7 +112,7 @@
 		"name":"ByridianBlack", 
 		"logo": {
 			"@type": "imageObject",
-			"url": "https:\/\/ByridianBlack.github.io\/img\/avatar.jpg"
+			"url": "https:\/\/malscope.com\/img\/avatar.jpg"
 		}
 	}
 }</script>
