--- a/search/index.html
+++ b/search/index.html
@@ -8,16 +8,16 @@
 	<meta name="theme-color" content="#1da1f2">
 	<title>Search 🔍 |  MalScope </title>
 	<meta name="description"
-		content="Search.">
+		content="Carilah dan tulis sesuatu kata kunci yang sesuai dengan keinginan Anda, dan carilah sampe ketemu!.">
 	<meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://malscope.com/img/avatar.jpg"/>
 
 <meta name="twitter:title" content="Search 🔍"/>
-<meta name="twitter:description" content="Search."/>
+<meta name="twitter:description" content="Carilah dan tulis sesuatu kata kunci yang sesuai dengan keinginan Anda, dan carilah sampe ketemu!."/>
 
 	<meta name="twitter:site" content="@ByridianBlack" />
 	<meta itemprop="name" content="Search 🔍">
-<meta itemprop="description" content="Search.">
+<meta itemprop="description" content="Carilah dan tulis sesuatu kata kunci yang sesuai dengan keinginan Anda, dan carilah sampe ketemu!.">
 
 <meta itemprop="wordCount" content="99">
 <meta itemprop="image" content="https://malscope.com/img/avatar.jpg"/>
@@ -292,10 +292,8 @@
 
 		</a>
 </div>
-	
+	<div class="footer__copyright">© 2022 <a href="https://wisnuwiry.space">MalScope</a> <span class="footer__copyright-credits"></span> | Created with ❤️ <a href="//gohugo.io">Hugo</a></div>
 </footer>
-
-
 	</div>
 	
 
