--- a/contact/index.html
+++ b/contact/index.html
@@ -189,8 +189,7 @@
 
 				
 
-
-<p>Email: pco2001w@gmail.com</p>
+pco2001w@gmail.com
 
 				
 
@@ -216,10 +215,8 @@
 
 		</a>
 </div>
-	
+	<div class="footer__copyright">© 2022 <a href="https://wisnuwiry.space">MalScope</a> <span class="footer__copyright-credits"></span> | Created with ❤️ <a href="//gohugo.io">Hugo</a></div>
 </footer>
-
-
 	</div>
 	
 
