--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ Author of Challenge: Danofred</p>
 		<h2>
 			<a href="/post/darkside/" class="invert">Darkside Malware</a>
 		</h2>
-		<p>Darkside is a ransomware notorious for attacking high profile industrial control systems and facilities.</p>
+		<p>Darkside is ransomware notorious for attacking high-profile industrial control systems and facilities.</p>
 		
 <div class="post__tag">
 			<a href="/tags/darkside/"># darkside</a>
@@ -263,7 +263,7 @@ Author of Challenge: Danofred</p>
 		<h2>
 			<a href="/post/discord/" class="invert">Discord Troll Malware</a>
 		</h2>
-		<p>Discord for the past few years has been known to be a hub for spreading malware and while they have done much to crack down on this spread the problem is still prevalent.</p>
+		<p>For the past few years, Discord has been a hub for spreading malware, and while they have done much to crack down on this spread, the problem is still prevalent.</p>
 		
 <div class="post__tag">
 			<a href="/tags/troll/"># troll</a>
